--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript_CrashCourse</title>
+    <title>javaScript-crashCourse</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body>
-
-    <div class="container-1">
-        <h2>Challenge 1: Your Age in Days</h2>
-        <div class="flex-box-1">
-            <div>
-                <button class="btn btn-primary">Click me</button>
-            </div>
-            <div>
-                <button class="btn btn-danger">reset</button>
-            </div>
+    <div class="container-challenge-1">
+        <div class="heading-container">
+            <h2>Challenge 1: Your Age in Days</h2>
         </div>
-        <div class="flex-box-1">
-            <div id="flex-box-result"></div>
+        <div class="main-ageInDays-container">
+            <div class="button">
+                <button class="btn btn-primary" onclick="ageInDaysparam()">Click me</button>
+            </div>
+            <div id="ageInDays-result">
+                <!-- here is main result -->
+            </div>
+            <div class="button">
+                <button class="btn btn-danger" onclick="resetAgeInDays()">Reset</button>
+            </div>
         </div>
     </div>
 
