Challenge-2 random cat genarator completed!

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         </div>
     </div>
 
+    <div class="container-2">
+        <h2>Challenge 2: Cat Genarator</h2>
+        <button class="btn btn-success" id="cat-ganerator" onclick="generateCat()">Generate Cat</button>
+
+        <div class="flex-box-container-2" id="cat-gen-container">
+            <!-- <img src="https://thecatapi.com/api/images/get?format=src&type=gif&size=small" alt="Cat1"> -->
+        </div>
+    </div>
+
     <script src="./static/js/script.js"></script>
 </body>
 </html>
