--- a/index.html
+++ b/index.html
@@ -40,15 +40,18 @@
 
         <div class="rpc-game-container" id="rpcc">
             <div id="hc">
-                <img id="rock" src="https://www.seekpng.com/png/detail/816-8161371_rock-paper-scissor-icon-png.png" height="150" onclick="rpsGame(this)">
+                <img class="all-button" id="rock" src="https://www.seekpng.com/png/detail/816-8161371_rock-paper-scissor-icon-png.png" height="150" onclick="rpsGame(this)">
             </div>
             <div id="ma">
-                <img id="paper" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUCmaf-HaltNtvmtB6EG8jCjkbICmErLjlvACv-XM1yXMDVN5Tk_FJOKYdlGNCYaihdBk&usqp=CAU" height="150" onclick="rpsGame(this)">
+                <img class="all-button" id="paper" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUCmaf-HaltNtvmtB6EG8jCjkbICmErLjlvACv-XM1yXMDVN5Tk_FJOKYdlGNCYaihdBk&usqp=CAU" height="150" onclick="rpsGame(this)">
             </div>
             <div id="bc">
-                <img id="scissors" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnGl8rflKvOAtHGAeTbVNihckaeR8d_FOdrXqpNAQJvsDbMfZm5DcpdB3P_7FGsOqU90o&usqp=CAU" height="150" onclick="rpsGame(this)">
+                <img class="all-button" id="scissors" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnGl8rflKvOAtHGAeTbVNihckaeR8d_FOdrXqpNAQJvsDbMfZm5DcpdB3P_7FGsOqU90o&usqp=CAU" height="150" onclick="rpsGame(this)">
             </div>
             
+        </div>
+        <div class="button-reset">
+            <span id="rps-reset">Reset</span>
         </div>
 
     </div>
