--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
 
     </div>
     
+    <div class="container-4">
+        <h2 id="change-my-color">Challenge 4: Change the color of all button!</h2>
+        <div class="flex-box-pic-color">
+            <form action="">
+                <select name="backdrop" id="background" onchange="buttonColorChange(this)">
+                    <option value="random">Random</option>
+                    <option value="green">Green</option>
+                    <option value="red">Red</option>
+                    <option value="reset">Reset</option>
+                </select>
+            </form>
+            <button class="btn btn-primary">Wee!</button>
+            <button class="btn btn-warning">Google</button>
+            <button class="btn btn-danger">Yeahoo!</button>
+            <button class="btn btn-success">Discord!</button>
+
+        </div>
+    </div>
 
     <script src="./static/js/script.js"></script>
 </body>
